Resources/Public/Stylesheets/Partials/FlashMessages.less
.flash-messages-container {
	position: fixed;
	width: 300px;
	height: auto;
	bottom: 60px;
	right: 10px;
	opacity: 0.80;
	.flash-message {
		margin-top: 15px;
		.flash-message-title {
			padding: 4px;
			font-weight: 600;
			text-align: center;
			border-radius: 10px 10px 0 0;
			.close {
				margin-right: 4px;
				line-height: 17px;
				font-size: 28px;
			}
			&.error {
				background-color: @brand-danger;
			}
			&.ok {
				background-color: @brand-success;
			}
			&.warning {
				background-color: @brand-warning;
			}
			&.info {
				background-color: @brand-primary;
			}
		}
		.flash-message-message {
			padding: 6px;
			background-color: #eeeeee;
			.time {
				font-weight: 600;
				font-size: 75%;
			}
		}
		.flash-message-footer {
			border-radius: 0 0 5px 5px;
			padding: 3px;
			background-color: #aaaaaa;
			font-size: 70%;
			text-align: center;
			font-weight: 600;
			.time {
				display: inline-block;
			}
		}
	}
}

